# statistics_and_engineering_lab

./: .gitignore  README.md  build_docker.sh  enter_docker.sh  export_requirements.sh  mkdocs.yml  statistics_and_engineering_lab.code-workspace
.github/workflows/: ci.yml  publish_to_pypi.yml  python_mendelian_randomisation.yml  rust_linear_regression.yml  rust_linear_regression_python_bindings.yml
docker/: Dockerfile
docs/: export_requirements.sh  index.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/bash/: conda.md  ssh.md  tips_examples.md  vim.md
docs/bioinformatics/: bcftools.md  plink.md
docs/misc/: setting_up_mkdocs.md
docs/notes/bash/: vim.md
docs/notes/misc/: setting_up_mkdocs.md
docs/notes/python/: matplotlib_examples.md  pandas_examples.md  tips_examples.md
docs/python/: matplotlib_examples.md  pandas_examples.md  tips.md  tips_examples.md
docs/python_projects/: linear_regression.md  mcp_server_for_tabular_data.md  mendelian_randomisation.md
docs/rust_projects/: data_structures.md  introduction.md  linear_regression.md
python_projects/linear_regression/: README.md  pyproject.toml
python_projects/linear_regression/src/: linear_regression.py
python_projects/linear_regression/src/linear_regression/: linear_regression.py
python_projects/linear_regression/tests/: test_linear_regression.py
python_projects/mcp_server_for_tabular_data/: pyproject.toml
python_projects/mendelian_randomisation/: LICENCE  README.md  pyproject.toml
python_projects/mendelian_randomisation/simulations/: README.md  config.json  config_null.json  do_simulations.py
python_projects/mendelian_randomisation/src/mendelian_randomisation/: __init__.py  estimate.py  simulate.py
python_projects/mendelian_randomisation/tests/: test_estimate.py  test_simulate.py
rust_projects/: Cargo.toml
rust_projects/linear_regression/: CHANGELOG.md  Cargo.toml
rust_projects/linear_regression/docker/: Dockerfile
rust_projects/linear_regression/src/: lib.rs  main.rs
rust_projects/linear_regression_python_bindings/: Cargo.toml
rust_projects/linear_regression_python_bindings/src/: lib.rs
