[tool.poetry]
package-mode = false
name = "stat-gen-playground"
authors = ["kai <87151509+drkaizeng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
pymdown-extensions = "^10.9"

[tool.poetry.group.non_docs.dependencies]
poetry-plugin-export = "^1.8.0"
