[tool.poetry]
package-mode = false
name = "statistics_and_engineering_lab"
authors = ["kai <87151509+drkaizeng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
pymdown-extensions = "^10.9"
mkdocs-material = "^9.7.0"
mkdocs-kroki-plugin = "^1.2.0"

[tool.poetry.group.non_docs.dependencies]
poetry-plugin-export = "^1.8.0"
