[project]
name = "linear-regression"
version = "0.0.1"
description = "A Python wrapper around rust_projects/linear_regression."
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "numpy>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../rust_projects/linear_regression_python_bindings/Cargo.toml"
