[project]
name = "linear-regression"
version = "0.0.1"
description = "A Python wrapper around rust_projects/linear_regression."
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "numpy>=2.4.0",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5",
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "../../rust_projects/linear_regression_python_bindings/Cargo.toml"
# Tell maturin where the Python source code is located
python-source = "src"
# Specify the name of the rust extension module.
# This would result in a file named linear_regression_python_bindings.so (or .pyd on Windows) in
# the linear_regression package.
module-name = "linear_regression.linear_regression_python_bindings"

[project.scripts]
linear-regression = "linear_regression.linear_regression:linear_regression"
