[project]
name = "drkaizeng-mendelian-randomisation"
version = "0.0.1"
description = "Simulate and estimate causal effects using Mendelian Randomisation."
authors = [{ name = "Kai Zeng" }]
readme = "README.md"
license-files = ["LICENCE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
requires-python = ">=3.13"
dependencies = ["click>=8.3.1", "numpy>=2.4.0", "scipy>=1.15.0"]

[project.urls]
Homepage = "https://statistics-and-engineering-lab.readthedocs.io/en/latest/python_projects/mendelian_randomisation/"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "ruff>=0.14.10", "ty>=0.0.5"]
simulations = ["matplotlib>=3.10.0", "msgspec>=0.19.0"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mendelian_randomisation"]

[project.scripts]
simulate = "mendelian_randomisation.simulate:simulate"
estimate = "mendelian_randomisation.estimate:estimate"
